--- a/css/style.css
+++ b/css/style.css
@@ -2774,6 +2774,9 @@ article img.pull-right, article .align-right {
   color:antiquewhite;
 }
 
+.radio-bitola{
+  margin-left: 10px;
+}
 .about-img{
   width: 400px;
   height: 400px;
