--- a/css/overwrite.css
+++ b/css/overwrite.css
@@ -105,6 +105,9 @@ textarea {
 label{
 	font-weight: bold;
 	color:#353535;
+	display: inline-block;
+	margin-bottom: 9px;
+
 }
 
 input,
@@ -519,7 +522,7 @@ dd {
 
 a.btn,.btn:focus {
 	outline:0;
-	
+
 }
 
 .btn-medium {
@@ -957,11 +960,11 @@ font-size: 10px;
    background-color: none;
   background-image: none;
   background-repeat: repeat-x;
-  filter: none; 
+  filter: none;
   text-decoration: none;
   -webkit-box-shadow: none;
      -moz-box-shadow: none;
-          box-shadow: none;		  
+          box-shadow: none;
 }
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
@@ -969,7 +972,7 @@ font-size: 10px;
   color: #fff;
    background-image: none;
   background-image: none;
-  filter: none;  
+  filter: none;
   text-decoration: none;
   -webkit-box-shadow: none;
      -moz-box-shadow: none;
@@ -1032,7 +1035,7 @@ font-size: 10px;
 
 .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
-.dropdown-submenu:hover > a, 
+.dropdown-submenu:hover > a,
 .dropdown-menu .active > a,
 .dropdown-menu .active > a:hover {
   color: #ffffff;
@@ -1428,15 +1431,10 @@ font-weight:600;
      -moz-border-radius: 2px;
           border-radius: 2px;
 }
+.img-logo{
+	margin-top: -62px;
+	width: 145px;
+	position: absolute;
+	z-index: 1;
 
-
-
-
-
-
-
-
-
-
-
-
+}
